--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <div id="top_main">
 
 	
-	<b><a href="#"><img src="Images/only_128.png" ></a></b>
+	<b class="set"><a href="#"><img src="Images/only_128.png" ></a></b>
 
 <!--************************************************************************-->
 
